[metadata]
name = ipynbview
author = Christopher Brown
author_email = io@henrian.com
url = https://github.com/chbrown/ipynbview
description = IPython Notebook Viewer - Local filesystem - Readonly
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
python_requires = >=3.6
install_requires =
  click>=7.0,<8.0
  fastapi>=0.54.1,<1.0
  nbconvert>=5.6.1,<6.0
  nbformat>=5.0.6,<6.0
setup_requires =
  pytest-runner
  setuptools-scm
tests_require =
  pytest
  pytest-black
  pytest-cov

[aliases]
test = pytest

[tool:pytest]
addopts =
  --black
  --cov=ipynbview
  --cov-branch
